--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 	<h1>Headlines</h1>
-	<b>title</b> <br />
-	<i>published</i> <br />
-	<p>summary</p> <br />
+	<b>{{title}}</b> <br />
+	<i>{{published}}</i> <br />
+	<p>{{summary}}</p> <br />
 </body>
 </html>
