--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 <body>
 	<h1>Headlines</h1>
 	{% for article in articles %}
-		<b>{{article.title}}</b> <br />
+		<b><a href="{{article.link}}" target="_blank">{{article.title}}</a></b> <br />
 		<i>{{article.published}}</i> <br />
 		<p>{{article.summary}}</p> <br />
 		<hr />
