--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,11 @@
 </head>
 <body>
 	<h1>Headlines</h1>
+	<h2>Current Weather</h2>
+	<p>City: <b>{{weather.city}}</b></p>
+	<p>{{weather.description}} | {{weather.temperature}}&#8451;</p>
+	<hr />
+	<h2>Headlines</h2>
 	<form action="/" method="POST">
 		<input type="text" name="publication" placeholder="search" />
 		<input type="submit" value="Submit" />
