--- a/templates/home.html
+++ b/templates/home.html
@@ -8,9 +8,14 @@
 	<h2>Current Weather</h2>
 	<p>City: <b>{{weather.city}}</b></p>
 	<p>{{weather.description}} | {{weather.temperature}}&#8451;</p>
+	<br />
+	<form>
+		<input type="text" name="city" placeholder="weather search" />
+		<input type="submit" value="Submit" />
+	</form>
 	<hr />
 	<h2>Headlines</h2>
-	<form action="/" method="POST">
+	<form action="/" method="GET">
 		<input type="text" name="publication" placeholder="search" />
 		<input type="submit" value="Submit" />
 	</form>
