weather add country information

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 <body>
 	<h1>Headlines</h1>
 	<h2>Current Weather</h2>
-	<p>City: <b>{{weather.city}}</b></p>
+	<p>City: <b>{{weather.city}}, {{weather.country}}</b></p>
 	<p>{{weather.description}} | {{weather.temperature}}&#8451;</p>
 	<br />
 	<form>
