--- a/templates/home.html
+++ b/templates/home.html
@@ -17,18 +17,14 @@
 	<h2>Currency</h2>
 	<form>
 		from: 	<select name="currency_from">
-					<option value="IDR">IDR</option>
-					<option value="USD">USD</option>
-					<option value="GBP">GBP</option>
-					<option value="EUR">EUR</option>
-					<option value="ZAR">ZAR</option>
+				{% for currency in currencies %}
+					<option value="{{currency}}">{{currency}}</option>
+				{% endfor %}
 				</select>
 		to: 	<select name="currency_to">
-					<option value="IDR">IDR</option>
-					<option value="USD">USD</option>
-					<option value="GBP">GBP</option>
-					<option value="EUR">EUR</option>
-					<option value="ZAR">ZAR</option>
+				{% for currency in currencies %}
+					<option value="{{currency}}">{{currency}}</option>
+				{% endfor %}
 				</select>
 
 		<input type="submit" value="Submit">
