display current currency in dropdown

--- a/templates/home.html
+++ b/templates/home.html
@@ -18,12 +18,12 @@
 	<form>
 		from: 	<select name="currency_from">
 				{% for currency in currencies %}
-					<option value="{{currency}}">{{currency}}</option>
+					<option value="{{currency}}" {{'selected="selected"' if currency_from==currency}}>{{currency}}</option>
 				{% endfor %}
 				</select>
 		to: 	<select name="currency_to">
 				{% for currency in currencies %}
-					<option value="{{currency}}">{{currency}}</option>
+					<option value="{{currency}}" {{'selected="selected"' if currency_to==currency}}>{{currency}}</option>
 				{% endfor %}
 				</select>
 
