adding first css

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,9 +2,32 @@
 <html>
 <head>
 	<title>Headlines</title>
+	<style type="text/css">
+		html {
+			font-family: "Helvetica";
+			background: white;
+		}
+
+		body {
+			background: lightgrey;
+			max-width: 900px;
+			margin: 0 auto;
+		}
+
+		#header {
+			background: lightsteelblue;
+		}
+
+	</style>
 </head>
 <body>
-	<h1>Headlines</h1>
+	<div id="header">
+		<h1>Headlines</h1>
+		<p>Headlines, Currency, Weather.</p>
+		<hr />
+	</div>
+
+
 	<h2>Current Weather</h2>
 	<form>
 		<input type="text" name="city" placeholder="weather search" />
